progress on google login stuff?

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,13 @@
 
 <html>
   <head>
-    <title>LOGIN PAGE</title>
+    <title>Index Page</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
 
   <body>
-    <h1>YAY</h1>
+    <h1>Hello, you have entered our site</h1>
+    <h2>{{message}}</h2>
+    <a href='/login'><button>Login</button></a>
   </body>
 </html>
