--- a/app/templates/protected.html
+++ b/app/templates/protected.html
@@ -2,11 +2,12 @@
 
 <html>
   <head>
-    <title>LOGIN PAGE</title>
+    <title>PROTECTED</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
 
   <body>
-    <h1>YAY</h1>
+    <h1>YAY, you made it in!</h1>
+    <a href='/logout'><button>Logout</button></a>
   </body>
 </html>
