--- a/app/templates/protected.html
+++ b/app/templates/protected.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>YAY, you made it in!</h1>
+    <h1>YAY, {{name}} at {{email}} made it in!</h1>
     <a href='/logout'><button>Logout</button></a>
   </body>
 </html>
