--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Hello, you have entered our site</h1>
-    <h2>{{message}}</h2>
-    <a href='/login'><button>Login</button></a>
+    <h2>{{ message }}</h2>
+    <a href="{{ url_for('login') }}"><button>Login</button></a>
   </body>
 </html>
