--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,5 +10,7 @@
     <h1>Hello, you have entered our site</h1>
     <h2>{{ message }}</h2>
     <a href="{{ url_for('login') }}"><button>Login</button></a>
+    <br>
+    <a href="teacherprofile">Teacher Profile</a>
   </body>
 </html>
