working submissino for teacher profile

--- a/app/templates/edit_teacherprofile.html
+++ b/app/templates/edit_teacherprofile.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <form>
+    <form action="/view_teacherprofile">
         Name: 
         (Prefix)
         <input list="prefixes" name="prefixes">
