--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,6 @@
     <h2>{{ message }}</h2>
     <a href="{{ url_for('login') }}"><button>Login</button></a>
     <br>
-    <a href="teacherprofile">Teacher Profile</a>
+    <a href="/edit_teacherprofile">Edit Teacher Profile</a>
   </body>
 </html>
