--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
+<!-- THIS IS WHERE TEACHERS CAN SEE THEIR OWN PROFILE -->
 <html>
   <head>
     <title>TEACHER</title>
   </head>
-
+    <!-- This displays everything that is filled in on the teacher profile edit page -->
   <body>
       Name: {{prefix}} {{name}}
       <br>
@@ -39,6 +39,7 @@
             {% endfor %}
         </tbody>
     </table>
-
+    <br>
+    <a href="/edit_teacherprofile">Edit Your Profile</a>
   </body>
 </html>
