--- a/app/templates/edit_teacherprofile.html
+++ b/app/templates/edit_teacherprofile.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-
+<!-- THIS IS WHERE TEACHERS CAN EDIT THEIR OWN PROFILE -->
 <html>
   <head>
     <title>TEACHER</title>
   </head>
 
   <body>
+    <!-- form to input information -->
     <form action="/view_teacherprofile" method="POST">
         Name: 
         (Prefix)
+        <!-- teacher selects the prefix they use -->
         <select list="prefixes" name="prefixes">
             <option value="None">None</option>
             <option value="Mr.">Mr.</option>
@@ -17,16 +19,26 @@
             <option value="Mx.">Mx.</option>
             <option value="Dr.">Dr.</option>
         </select>
+        <!-- teacher inputs their name -->
         <input type="text" id="Name" name="name">
         <br>
+        <!-- teacher inputs their pronouns -->
         Pronouns: <input type="text" name="Pronouns">
         <br>
-        (Preferred) Email(s): <input type="text" name="Email">
+        <!-- this is the teacher's stuy email that will be auto-filled -->
+        Email: <input type ="text" value="{{googstuy}}" name="stuyEmail">
         <br>
+        <!-- if a teacher prefers to be contacted via another email, they can put that email there -->
+        (Other Preferred) Email(s): <input type="text" name="otherEmail">
+        <br>
+
+        <!-- teachers can upload files like syllabi -->
         Important Files (i.e. syllabi):
         <br>
-        <input type="file" name="filename" multiple enctype="multipart/form-data">
+        <input type="file" name="filename" multiple>
 
+
+        <!-- this is the table with the teachers' schedule; they input what classes they teach, when, and free periods -->
         <table>
             <thead>
                 <tr>
