worked on student/teacher profiles

--- a/app/templates/setup_student.html
+++ b/app/templates/setup_student.html
@@ -9,11 +9,17 @@
 		</h1>
 		<table>
 			<tr> 
+				<th>Star</th>
 				<th>Teacher</th>
+				<th>Classes Taught</th>
+				<th>More Information</th>
 			</tr>
 			{% for teacher in teacher_list %}
 			<tr>
+				<td>{{star}}</td>
 				<td> {{teacher}} </td>
+				<td>{{classes}}</td>
+				<td></td> <!-- this will link to the teacher's profile -->
 			</tr>
 			{% endfor %}
 		</table>
