--- a/app/templates/setup_teacher.html
+++ b/app/templates/setup_teacher.html
@@ -19,11 +19,11 @@
             <option value="Dr.">
             <option value="None">
         </datalist>
-        <input type="text" id="Name">
+        <input type="text" id="Name" value={{var}}>
         <br>
         Pronouns: <input type="text" name="Pronouns">
         <br>
-        (Preferred) Email(s): <input type="text" name="Email">
+        (Preferred) Email(s): <input type="text" name="Email" value={{email}}>
         <br>
         Important Files (i.e. syllabi):
         <br>
