fixed name error

--- a/app/templates/setup_teacher.html
+++ b/app/templates/setup_teacher.html
@@ -18,11 +18,11 @@
             <option value="Mx.">Mx.</option>
             <option value="Dr.">Dr.</option>
         </select>
-        <input type="text" id="Name" value={{var}}>
+        <input type="text" id="Name" value="{{name}}">
         <br>
         Pronouns: <input type="text" name="Pronouns">
         <br>
-        (Preferred) Email(s): <input type="text" name="Email" value={{email}}>
+        (Preferred) Email(s): <input type="text" name="Email" value="{{email}}"">
         <br>
         Important Files (i.e. syllabi):
         <br>
