--- a/app/templates/setup_teacher.html
+++ b/app/templates/setup_teacher.html
@@ -22,7 +22,7 @@
         <br>
         Pronouns: <input type="text" name="Pronouns">
         <br>
-        (Preferred) Email(s): <input type="text" name="Email" value="{{email}}"">
+        (Preferred) Email(s): <input type="text" name="Email" value="{{email}}">
         <br>
         Important Files (i.e. syllabi):
         <br>
@@ -43,7 +43,7 @@
                         {{n+1}}
                     </td>
                     <td>
-                        <input type="text" name="class">
+                        <input type="text" name="{{n}}">
                     </td>
                     <td>
                         <select name="status">
