--- a/app/templates/edit_teacherprofile.html
+++ b/app/templates/edit_teacherprofile.html
@@ -48,13 +48,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for n in range(10) %}
+
                 <tr>
                     <td>
-                        {{n+1}}
+                        1
                     </td>
                     <td>
-                        <input type="text" name="school_class" + {n}>
+                        <input type="text" name="class1">
                     </td>
                     <td>
                         <select name="status">
@@ -68,7 +68,188 @@
                         </select>
                     </td>
                 </tr>
-                {% endfor %}
+
+                <tr>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        <input type="text" name="class2">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        3
+                    </td>
+                    <td>
+                        <input type="text" name="class3">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        4
+                    </td>
+                    <td>
+                        <input type="text" name="class4">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        5
+                    </td>
+                    <td>
+                        <input type="text" name="class5">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        6
+                    </td>
+                    <td>
+                        <input type="text" name="class6">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        7
+                    </td>
+                    <td>
+                        <input type="text" name="class7">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        8
+                    </td>
+                    <td>
+                        <input type="text" name="class8">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        9
+                    </td>
+                    <td>
+                        <input type="text" name="class9">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        10
+                    </td>
+                    <td>
+                        <input type="text" name="class10">
+                    </td>
+                    <td>
+                        <select name="status">
+                            <option>Never free (teaching)</option>
+                            <option>Never free (working/lunch/etc)</option>
+                            <option>Free for walk-ins</option>
+                            <option>Free -- appointment only</option>
+                            <option>Teaching, but free both before and after during passing</option>
+                            <option>Teaching, but free only before this period during passing</option>
+                            <option>Teaching, but free only after this period during passing</option>
+                        </select>
+                    </td>
+                </tr>
+
+
             </tbody>
         </table>
         <input type="submit" name="Save" value="Save"></input>
