setup student to student

--- a/app/templates/student.html
+++ b/app/templates/student.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container-xxl my-4 bd-layout">
   <h1>Set Up Student Profile</h1>
-  <form action="/setup_student" method="POST">
+  <form action="/student" method="POST">
     <table>
       <tr> 
         <th>Star</th>
