--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
 <!-- THIS IS WHERE TEACHERS CAN SEE THEIR OWN PROFILE -->
-<html>
-  <head>
-    <title>TEACHER</title>
-  </head>
-    <!-- This displays everything that is filled in on the teacher profile edit page -->
-  <body>
+{% block title %}View Your Profile{% endblock %}
+
+{% block content %}
+<div>
+    <h1>View Your Profile</h1>
       Name: {{prefix}} {{name}}
       <br>
       Pronouns: {{pronouns}}
@@ -41,5 +41,5 @@
     </table>
     <br>
     <a href="/edit_teacherprofile">Edit Your Profile</a>
-  </body>
-</html>
+    {% endblock %}
+
