--- a/app/templates/teacher_landing.html
+++ b/app/templates/teacher_landing.html
@@ -2,7 +2,7 @@
 {% block title %}Welcome to your profile{% endblock %}
 
 {% block content %}
-<div>
-  <h1>Welcome back, {{name}}</h1>
+<div class="container-xxl my-4 bd-layout">
+  <h1>Welcome back, {{name}}!</h1>
 </div>
 {% endblock %}
