--- a/app/templates/view_teacherprofile.html
+++ b/app/templates/view_teacherprofile.html
@@ -40,6 +40,6 @@
         </tbody>
     </table>
     <br>
-    <a href="/edit_teacherprofile">Edit Your Profile</a>
+    <a href="/setup_teacher">Edit Your Profile</a>
   </body>
 </html>
